Bug 1274769 - handle the WebGLTimerQuery deletion status for GLContext cleanup. r=jgilbert